@@ -386,6 +386,7 @@ sub get_spvm_core_source_file_names {
     spvm_opcode_array.c
     spvm_opcode_builder.c
     spvm_opcode.c
+    spvm_public_api.c
     spvm_string.c
     spvm_string_buffer.c
     spvm_switch_info.c
@@ -437,6 +438,7 @@ sub get_spvm_core_header_file_names {
     spvm_opcode_builder.h
     spvm_opcode.h
     spvm_op.h
+    spvm_public_api.h
     spvm_runtime_basic_type.h
     spvm_runtime_class.h
     spvm_runtime_class_var.h
