@@ -1,0 +1,9 @@
+#ifndef SPVM_PUBLIC_API_H
+#define SPVM_PUBLIC_API_H
+
+#include "spvm_typedecl.h"
+#include "spvm_native.h"
+
+SPVM_ENV* SPVM_PUBLIC_API_new_env_raw(SPVM_ENV* unused_env);
+
+#endif
